assets/css/main.css
:root {
	--background: aliceblue;
	--overlay: white;
	--link: #008273;
	--highlight: #9FE8DC;
	--highlight-trans: rgba(159, 232, 220, 0.5);
}

html {
	background: var(--background);
	display: flex;
	flex-direction: column;
	align-items: center;
}

body {
	font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Helvetica Neue", "Helvetica", sans-serif;
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 0;
  max-width: 800px;
	min-height: 100vh;
}

body > * {
	background: var(--overlay);
	width: calc(100% - 2em);
	padding: 1em;
}

a {
	color: var(--link);
	text-decoration: none;
	font-weight: normal;
}

h2, h3 {
	font-weight: normal;
	font-size: 1.5em;
	font-weight: 200;
}

.bio-photo {
	max-width: 100px;
	max-height: 100px;
	min-width: 50px;
	min-height: 50px;
	display: block;
	font-size: 0.8em;
	flex: 1;
	object-fit: contain;
}

.index, .author-bio-text {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	flex: 1;
}

.author-bio-text h3 {
	margin: 0 0 0.5em 0;
	font-weight: 100;
	font-size: 2.5em;
}

.article-author-side, .author-bio-body, .article-author-bottom {
	display: flex;
	align-items: center;
	flex: 1;
	text-align: center;
	justify-content: center;
	flex-wrap: wrap;
}

.article-author-side, .article-author-bottom {
	flex-direction: column;
}

.author-bio-body {
	flex-direction: row;
}

.article-author-side > * {
}

.article-author-side > * > * {
	flex: none;
}

.author-bio-body a {
	flex: none;
	margin: 0 1em;
}

footer {
  font-size: smaller;
  font-weight: lighter;
}

nav {
	width: 100%;
	background: var(--highlight);
	box-shadow: 5px 10px 0 var(--highlight-trans);
}

@media screen and (max-width: 800px) {
	nav {
		width: calc(100% - 2em);
	}
}

hr {
	border: 0;
	border-top: 1px solid var(--highlight);
}

nav ul {
	display: flex;
	flex-direction: row;
	justify-content: center;
	list-style: none;
	padding: 0;
	margin: 1em;
	flex-wrap: wrap;
}

nav ul li {
	margin: 0 1em;
	text-align: center;
}

nav ul li a {
	font-size: 1.5em;
	font-weight: 200;
}

nav ul li .linknote, nav ul li .linknote a {
	font-size: 1em;
	font-weight: normal;
}

table {
	overflow-x: scroll;
	max-width: 100%;
	display: block;
	border-collapse: collapse;
}

td {
	padding: 1em 0.5em;
}

th {
	border-bottom: 1px solid var(--highlight);
}

img {
	max-width: 100%;
	max-height: 100vh;
	display: block;
	margin: auto;
}

@media screen and (min-height: 400px) {
  img {
		max-height: 400px;
	}
}

